--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "express": "^4.17.1",
     "mongoose": "^6.0.12",
-    "node-telegram-bot-api": "^0.56.0"
+    "node-telegram-bot-api": "^0.56.0",
+    "dotenv": "^16.3.1",
+    "node-fetch": "^2.7.0"
   },
   "scripts": {
     "start": "node src/index.js"
